--- a/SmartHome/en.lproj/MainStoryboard.storyboard
+++ b/SmartHome/en.lproj/MainStoryboard.storyboard
@@ -605,15 +605,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="27J-SY-tBY" firstAttribute="baseline" secondItem="ZO0-VB-cMu" secondAttribute="baseline" type="default" id="4fL-Kn-HHl"/>
+                            <constraint firstAttribute="bottom" secondItem="NnB-4n-XSa" secondAttribute="bottom" constant="184" id="6Nx-sL-sM9"/>
                             <constraint firstItem="ZO0-VB-cMu" firstAttribute="top" secondItem="4yc-Kb-7gB" secondAttribute="top" constant="20" symbolic="YES" type="default" id="7h0-D0-fNh"/>
                             <constraint firstItem="27J-SY-tBY" firstAttribute="leading" secondItem="4yc-Kb-7gB" secondAttribute="leading" constant="69" id="9i0-df-CJV"/>
                             <constraint firstItem="ZO0-VB-cMu" firstAttribute="leading" secondItem="4yc-Kb-7gB" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="AF3-mZ-xh2"/>
-                            <constraint firstItem="4Cj-Sg-iBb" firstAttribute="top" secondItem="4yc-Kb-7gB" secondAttribute="top" constant="267" id="Dzc-qA-Oon"/>
-                            <constraint firstAttribute="bottom" secondItem="NnB-4n-XSa" secondAttribute="bottom" constant="298" id="L68-MU-i9y"/>
+                            <constraint firstItem="NnB-4n-XSa" firstAttribute="leading" secondItem="4yc-Kb-7gB" secondAttribute="leading" constant="497" id="D6R-og-Ii3"/>
+                            <constraint firstItem="4Cj-Sg-iBb" firstAttribute="top" secondItem="4yc-Kb-7gB" secondAttribute="top" constant="167" id="DAc-Fw-gE7"/>
                             <constraint firstItem="xzH-1C-RVj" firstAttribute="centerX" secondItem="4yc-Kb-7gB" secondAttribute="centerX" type="default" id="NMg-YL-JsD"/>
+                            <constraint firstItem="NnB-4n-XSa" firstAttribute="centerX" secondItem="4Cj-Sg-iBb" secondAttribute="centerX" type="default" id="ch1-4Q-vWn"/>
                             <constraint firstItem="xzH-1C-RVj" firstAttribute="centerY" secondItem="4yc-Kb-7gB" secondAttribute="centerY" type="default" id="lBk-1J-oxr"/>
-                            <constraint firstAttribute="trailing" secondItem="4Cj-Sg-iBb" secondAttribute="trailing" constant="435" id="qdw-0c-niy"/>
-                            <constraint firstAttribute="trailing" secondItem="NnB-4n-XSa" secondAttribute="trailing" constant="419" id="xDA-wm-Az0"/>
                         </constraints>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
@@ -845,16 +845,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="f0i-Im-HWl" firstAttribute="top" secondItem="C55-Vu-Fhp" secondAttribute="top" constant="269" id="3I7-XE-LZ4"/>
-                            <constraint firstAttribute="trailing" secondItem="f0i-Im-HWl" secondAttribute="trailing" constant="399" id="HC0-Om-c6M"/>
-                            <constraint firstItem="W7W-V2-CLc" firstAttribute="top" secondItem="C55-Vu-Fhp" secondAttribute="top" constant="325" id="OiI-Rw-tIW"/>
-                            <constraint firstItem="W7W-V2-CLc" firstAttribute="leading" secondItem="7Be-ko-CWG" secondAttribute="leading" type="default" id="QqJ-mc-1PF"/>
+                            <constraint firstItem="W7W-V2-CLc" firstAttribute="leading" secondItem="C55-Vu-Fhp" secondAttribute="leading" constant="345" id="8Tx-gI-v2t"/>
+                            <constraint firstItem="7Be-ko-CWG" firstAttribute="top" secondItem="C55-Vu-Fhp" secondAttribute="top" constant="302" id="HTu-ud-aEt"/>
+                            <constraint firstItem="f0i-Im-HWl" firstAttribute="leading" secondItem="C55-Vu-Fhp" secondAttribute="leading" constant="457" id="LIF-M5-SmT"/>
+                            <constraint firstItem="W7W-V2-CLc" firstAttribute="top" secondItem="C55-Vu-Fhp" secondAttribute="top" constant="223" id="MVQ-1J-fJx"/>
+                            <constraint firstAttribute="bottom" secondItem="f0i-Im-HWl" secondAttribute="bottom" constant="178" id="OIr-eH-PAa"/>
                             <constraint firstItem="gCx-OI-2X0" firstAttribute="baseline" secondItem="OMq-sY-LAQ" secondAttribute="baseline" type="default" id="TvT-SB-4Q6"/>
-                            <constraint firstItem="7Be-ko-CWG" firstAttribute="leading" secondItem="C55-Vu-Fhp" secondAttribute="leading" constant="374" id="Y8d-4x-T5h"/>
+                            <constraint firstAttribute="trailing" secondItem="7Be-ko-CWG" secondAttribute="trailing" constant="341" id="Xx3-Ta-nzI"/>
                             <constraint firstItem="OMq-sY-LAQ" firstAttribute="leading" secondItem="C55-Vu-Fhp" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Z30-Jd-Llm"/>
                             <constraint firstItem="gCx-OI-2X0" firstAttribute="leading" secondItem="C55-Vu-Fhp" secondAttribute="leading" constant="69" id="eO2-EC-lS6"/>
                             <constraint firstItem="OMq-sY-LAQ" firstAttribute="top" secondItem="C55-Vu-Fhp" secondAttribute="top" constant="20" symbolic="YES" type="default" id="opN-yM-RRZ"/>
-                            <constraint firstItem="7Be-ko-CWG" firstAttribute="top" secondItem="C55-Vu-Fhp" secondAttribute="top" constant="178" id="oqj-Yi-SM2"/>
                             <constraint firstItem="Y3c-WO-cwq" firstAttribute="centerX" secondItem="C55-Vu-Fhp" secondAttribute="centerX" type="default" id="rSr-nc-np3"/>
                             <constraint firstItem="Y3c-WO-cwq" firstAttribute="centerY" secondItem="C55-Vu-Fhp" secondAttribute="centerY" type="default" id="xgQ-0T-feB"/>
                         </constraints>
@@ -935,17 +935,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="6u6-nQ-CR4" firstAttribute="leading" secondItem="UEf-hD-lsb" secondAttribute="leading" constant="428" id="0CK-et-DHg"/>
                             <constraint firstItem="b3S-7z-kiC" firstAttribute="leading" secondItem="UEf-hD-lsb" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="5bX-7M-Azm"/>
                             <constraint firstItem="8Gj-S8-3bs" firstAttribute="leading" secondItem="UEf-hD-lsb" secondAttribute="leading" constant="69" id="A7V-vp-E2y"/>
                             <constraint firstItem="w4Y-xs-HEY" firstAttribute="centerY" secondItem="UEf-hD-lsb" secondAttribute="centerY" type="default" id="GEH-MZ-pxW"/>
-                            <constraint firstItem="6u6-nQ-CR4" firstAttribute="leading" secondItem="UEf-hD-lsb" secondAttribute="leading" constant="457" id="PZN-1E-be4"/>
+                            <constraint firstAttribute="bottom" secondItem="6u6-nQ-CR4" secondAttribute="bottom" constant="158" id="KEb-va-1nz"/>
                             <constraint firstItem="b3S-7z-kiC" firstAttribute="top" secondItem="UEf-hD-lsb" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Q4N-lA-Xkv"/>
-                            <constraint firstItem="cB0-L4-rso" firstAttribute="top" secondItem="UEf-hD-lsb" secondAttribute="top" constant="342" id="WW2-Xo-7fS"/>
+                            <constraint firstItem="cB0-L4-rso" firstAttribute="top" secondItem="UEf-hD-lsb" secondAttribute="top" constant="339" id="YMS-vA-uTh"/>
                             <constraint firstItem="w4Y-xs-HEY" firstAttribute="centerX" secondItem="UEf-hD-lsb" secondAttribute="centerX" type="default" id="aIm-nh-Std"/>
                             <constraint firstItem="8Gj-S8-3bs" firstAttribute="top" secondItem="UEf-hD-lsb" secondAttribute="top" constant="20" symbolic="YES" type="default" id="obN-eP-m4a"/>
                             <constraint firstItem="8Gj-S8-3bs" firstAttribute="baseline" secondItem="b3S-7z-kiC" secondAttribute="baseline" type="default" id="pc5-tb-BY2"/>
-                            <constraint firstItem="cB0-L4-rso" firstAttribute="leading" secondItem="UEf-hD-lsb" secondAttribute="leading" constant="430" id="yBc-mb-qNj"/>
-                            <constraint firstItem="6u6-nQ-CR4" firstAttribute="top" secondItem="UEf-hD-lsb" secondAttribute="top" constant="222" id="zOj-l7-8uF"/>
+                            <constraint firstAttribute="trailing" secondItem="cB0-L4-rso" secondAttribute="trailing" constant="346" id="yPV-j3-Es4"/>
                         </constraints>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
@@ -1312,7 +1312,6 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bQ3-HC-Dwi">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="75" id="1Ii-FV-bRd"/>
                                     <constraint firstAttribute="width" constant="75" id="62N-c5-pmj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" size="button"/>
@@ -1340,7 +1339,7 @@
                                     <action selector="phoneButtonTouchUp:" destination="BbP-8x-A33" eventType="touchUpInside" id="bQz-Zq-kMt"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKx-bA-hMV">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WtP-kT-S6Y">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Heizung">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -1350,28 +1349,29 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="heatingButtonTouchUp:" destination="BbP-8x-A33" eventType="touchUpInside" id="UPy-8B-5hV"/>
+                                    <action selector="heatingButtonTouchUp:" destination="BbP-8x-A33" eventType="touchUpInside" id="gzG-KO-VZz"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="KRK-KD-dJ5" secondAttribute="bottom" constant="242" id="4no-vi-IJc"/>
                             <constraint firstItem="0EI-Jc-Foh" firstAttribute="leading" secondItem="blr-Vx-jsc" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="8rj-4l-EqJ"/>
                             <constraint firstItem="yPy-36-ZZG" firstAttribute="centerX" secondItem="Jrb-Ie-Vfb" secondAttribute="centerX" type="default" id="AgK-ad-gXV"/>
                             <constraint firstItem="0EI-Jc-Foh" firstAttribute="top" secondItem="blr-Vx-jsc" secondAttribute="top" constant="20" symbolic="YES" type="default" id="AoC-pw-GD6"/>
-                            <constraint firstAttribute="trailing" secondItem="bQ3-HC-Dwi" secondAttribute="trailing" constant="327" id="G40-ZX-G1U"/>
-                            <constraint firstItem="Jrb-Ie-Vfb" firstAttribute="top" secondItem="blr-Vx-jsc" secondAttribute="top" constant="140" id="Ioq-9t-x44"/>
-                            <constraint firstAttribute="trailing" secondItem="fKx-bA-hMV" secondAttribute="trailing" constant="170" id="Ix2-Wc-Lfq"/>
-                            <constraint firstItem="0EI-Jc-Foh" firstAttribute="baseline" secondItem="IzX-du-h8F" secondAttribute="baseline" type="default" id="LXA-oy-iIK"/>
-                            <constraint firstItem="KRK-KD-dJ5" firstAttribute="leading" secondItem="blr-Vx-jsc" secondAttribute="leading" constant="341" id="Lnf-Ns-FWx"/>
-                            <constraint firstItem="EYK-JX-cDp" firstAttribute="leading" secondItem="blr-Vx-jsc" secondAttribute="leading" constant="181" id="PFu-PL-1od"/>
-                            <constraint firstItem="fKx-bA-hMV" firstAttribute="baseline" secondItem="EYK-JX-cDp" secondAttribute="baseline" type="default" id="XQ0-8n-xr7"/>
+                            <constraint firstItem="Jrb-Ie-Vfb" firstAttribute="centerX" secondItem="blr-Vx-jsc" secondAttribute="centerX" type="default" id="D6H-4l-bfU"/>
+                            <constraint firstAttribute="trailing" secondItem="WtP-kT-S6Y" secondAttribute="trailing" constant="221" id="M1e-ab-Cy3"/>
+                            <constraint firstItem="IzX-du-h8F" firstAttribute="top" secondItem="blr-Vx-jsc" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Qc7-28-35h"/>
+                            <constraint firstItem="EYK-JX-cDp" firstAttribute="top" secondItem="blr-Vx-jsc" secondAttribute="top" constant="275" id="UoU-3N-41r"/>
+                            <constraint firstItem="WtP-kT-S6Y" firstAttribute="top" secondItem="EYK-JX-cDp" secondAttribute="top" type="default" id="Wau-b1-R2o"/>
                             <constraint firstItem="IzX-du-h8F" firstAttribute="leading" secondItem="blr-Vx-jsc" secondAttribute="leading" constant="68" id="iuE-vX-wy9"/>
-                            <constraint firstItem="EYK-JX-cDp" firstAttribute="top" secondItem="blr-Vx-jsc" secondAttribute="top" constant="304" id="pic-TX-Ruf"/>
-                            <constraint firstAttribute="bottom" secondItem="bQ3-HC-Dwi" secondAttribute="bottom" constant="141" id="sft-W4-6vg"/>
+                            <constraint firstItem="WtP-kT-S6Y" firstAttribute="baseline" secondItem="EYK-JX-cDp" secondAttribute="baseline" type="default" id="mCN-DY-oH9"/>
+                            <constraint firstItem="Jrb-Ie-Vfb" firstAttribute="top" secondItem="blr-Vx-jsc" secondAttribute="top" constant="151" id="men-y1-4nP"/>
+                            <constraint firstItem="KRK-KD-dJ5" firstAttribute="leading" secondItem="blr-Vx-jsc" secondAttribute="leading" constant="359" id="pVJ-GE-bix"/>
+                            <constraint firstAttribute="trailing" secondItem="bQ3-HC-Dwi" secondAttribute="trailing" constant="327" id="pZE-wy-lNH"/>
                             <constraint firstItem="yPy-36-ZZG" firstAttribute="centerY" secondItem="blr-Vx-jsc" secondAttribute="centerY" type="default" id="ugg-mA-OSH"/>
-                            <constraint firstItem="yPy-36-ZZG" firstAttribute="centerX" secondItem="blr-Vx-jsc" secondAttribute="centerX" type="default" id="wyQ-m6-SQJ"/>
+                            <constraint firstAttribute="bottom" secondItem="KRK-KD-dJ5" secondAttribute="bottom" constant="264" id="usP-Tk-1ce"/>
+                            <constraint firstAttribute="bottom" secondItem="bQ3-HC-Dwi" secondAttribute="bottom" constant="159" id="wz9-pe-buI"/>
+                            <constraint firstItem="EYK-JX-cDp" firstAttribute="leading" secondItem="blr-Vx-jsc" secondAttribute="leading" constant="214" id="zaN-CN-yVh"/>
                         </constraints>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
